# gba-multiboot-pico

./: .gitignore  CMakeLists.txt  README.md
cli/: README.md  pyproject.toml
firmware/: README.md  main.c
